--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,43 +1,18 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.background {
+  background-image: url('/backimg.png');
+  /* background-image: url('/b2.jpg'); */
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Set the alpha value (0.5 for 50% transparency) */
+  background-attachment: fixed; /* Fixed background image */
+  /* opacity: 0.8; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.3); /* Adjust the alpha value to control the brightness (0.3 for 70% brightness) */
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
