--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,5 +1,6 @@
 .background {
   background-image: url('/backimg.png');
+  /* background-image: url('/bgimg3.png'); */
   /* background-image: url('/b2.jpg'); */
   background-size: cover;
   background-position: center;
